<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LOGIN.FogetPassActivity"
    android:background="@drawable/background_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_phuongnam" />

        <EditText
            android:id="@+id/ed_user_foget"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:hint="@string/activity_login_edt_username_hint"
            android:textColor="@color/login_text" />

        <EditText
            android:id="@+id/ed_phone_foget"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:hint="@string/activity_signin_edt_phone_hint"
            android:textColor="@color/login_text" />
        <EditText
            android:id="@+id/ed_pass_foget"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:hint="@string/fogetpass_edi_hint_pass"
            android:textColor="@color/login_text" />
        <EditText
            android:id="@+id/ed_repass_foget"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:hint="@string/fogetpass_edi_hint_repass"
            android:textColor="@color/login_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_confirm_foget"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp"
                android:text="@string/activity_signin_btn_confirm" />

            <Button
                android:id="@+id/btn_cancel_foget"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/activity_signin_btn_cancel" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>