<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LOGIN.CreateAccountActivity"
    android:background="@drawable/background_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_phuongnam"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/activity_login_edt_username_hint"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:id="@+id/ed_user_signin"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/activity_login_edt_password_hint"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:id="@+id/ed_pass_signin"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/activity_signin_edt_repass_hint"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:id="@+id/ed_repass_signin"/>

        <EditText
            android:id="@+id/ed_name_signin"
            android:layout_width="300dp"
            android:layout_height="59dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/activity_signin_edt_name_hint"
            android:textColor="@color/black" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/activity_signin_edt_phone_hint"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:id="@+id/ed_phone_signin"
            android:layout_marginTop="20dp"/>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giới tinh"
                android:layout_gravity="center"
                android:textSize="20dp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rdo_nam"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nam"
                    android:layout_gravity="center"
                    android:textSize="15dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/rdo_nu"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nữ"
                    android:layout_gravity="center"
                    android:textSize="15dp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_signin_btn_confirm"
                android:id="@+id/btn_confirm_signin"
                android:layout_marginLeft="95dp"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_signin_btn_cancel"
                android:id="@+id/btn_cancel_signin"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>