<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@drawable/background_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_phuongnam"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/activity_login_edt_username_hint"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/login_text"
            android:layout_marginTop="50dp"
            android:id="@+id/ed_user_login"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/activity_login_edt_password_hint"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/login_text"
            android:id="@+id/ed_pass_login"
            android:layout_marginTop="50dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_btn_login"
                android:id="@+id/btn_login_login"
                android:layout_marginLeft="95dp"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_btn_signin"
                android:id="@+id/btn_signin_login"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>